@@ -20,6 +20,7 @@ GENERAL:
 * extend usage of DefaultSecurityRule to class Container/DeviceCloud/DeviceOnPrem
 * class DefaultSecurityRules - skip reading source/destination/from/to
 * pan_php_framework - optimise method convert()
+* class AddressStore | loop dependencies error with more details
 
 
 2.0.57 (20220905)
